Add Users class and updateUserList event

--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://fonts.googleapis.com/css?family=Mali" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Changa" rel="stylesheet">
     <link rel="stylesheet" href="/css/libs/bootstrap.min.css">
     <link rel="stylesheet" href="/css/styles.css">
     <title>Join | ChatApp</title>
 </head>
 <body class="centered-form">
     <div class="container">
+            <div class="logo">
+                <h1>بسيط</h1>
+            </div>
             <h3 class="text-center">Welcome to the ChatApp!</h3>
             <p class="text-center">Want to know how to use it? <a href="#click-here">click-here</a></p>
             <div class="centered-form__form">
@@ -20,7 +23,7 @@
                     <h2 class="text-center">JOIN</h2>
                 </div>
                 <div class="input-group input-group-md mb-3 form-field">
-                    <input class="form-control" name="name" autofocus autocomplete="off" type="text" placeholder="Display name">
+                    <input class="form-control" name="name" autocomplete="off" type="text" placeholder="Display name">
                 </div>
                 <div class="input-group input-group-md mb-3 form-field">
                     <input class="form-control" name="room" autocomplete="off" type="text" placeholder="Room name">
