--- a/public/chat.html
+++ b/public/chat.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://fonts.googleapis.com/css?family=Mali" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Changa|Mali" rel="stylesheet">
     <link rel="stylesheet" href="/css/libs/bootstrap.min.css">
     <link rel="stylesheet" href="/css/styles.css">
     <title>Chat | ChatApp</title>
 </head>
 <body>
-
+    
     <div class="chat__sidebar">
-
+        <div class="text-center" id="users"></div>
     </div>
 
     <div class="chat__main">
@@ -64,6 +64,7 @@
     <script src="./js/libs/bootstrap.min.js"></script>
     <script src="/js/libs/moment.js"></script>
     <SCript src="/js/libs/mustache.js"></SCript>
+    <script src="/js/libs/deparam.js"></script>
     <script src="/js/chat.js"></script>
 </body>
 </html>
