Send messages to only people in same room

--- a/public/chat.html
+++ b/public/chat.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Changa|Mali" rel="stylesheet">
     <link rel="stylesheet" href="/css/libs/bootstrap.min.css">
     <link rel="stylesheet" href="/css/styles.css">
-    <title>Chat | ChatApp</title>
+    <title>بسيط | ChatApp</title>
 </head>
 <body>
     
