--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Changa" rel="stylesheet">
     <link rel="stylesheet" href="/css/libs/bootstrap.min.css">
     <link rel="stylesheet" href="/css/styles.css">
-    <title>Join | ChatApp</title>
+    <title>بسيط | ChatApp</title>
 </head>
 <body class="centered-form">
     <div class="container">
