Some changes on style

--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,7 @@
             <div class="logo">
                 <h1>بسيط</h1>
             </div>
-            <h3 class="text-center">Welcome to the ChatApp!</h3>
-            <p class="text-center">Want to know how to use it? <a href="#click-here">click-here</a></p>
+            <h3 class="text-center">Welcome to the ChatApp | بسيط</h3>
             <div class="centered-form__form">
             <form action="/chat.html">
 
@@ -23,17 +22,24 @@
                     <h2 class="text-center">JOIN</h2>
                 </div>
                 <div class="input-group input-group-md mb-3 form-field">
-                    <input class="form-control" name="name" autocomplete="off" type="text" placeholder="Display name">
+                    <input class="form-control" name="name" autocomplete="off" type="text" placeholder="Your name" required >
                 </div>
                 <div class="input-group input-group-md mb-3 form-field">
-                    <input class="form-control" name="room" autocomplete="off" type="text" placeholder="Room name">
+                    <input class="form-control" name="room" autocomplete="off" type="text" placeholder="Room name" required>
                 </div>
 
                 <div class="text-center">
                     <button class="btn btn-success btn-lg">Join</button>
                 </div>
-
+                
             </form>
+        </div>
+
+        <div class="use">
+            <p>Enter your Name in the first field.</p>
+            <p>Enter any Rome name you want in the second field.</p>
+            <p>Share the link of the App and the room name which you created with your friend/s that you want talk with.</p>
+            <p><span>THEN </span>tell me how much it was easy and simple ^_^ @ <a href="https://twitter.com/MKHalid9896">Twitter</a>, <a href="https://www.linkedin.com/in/mohamed-khalid-webdeveloper/">Linkdin</a></p>
         </div>
     </div>
 
