--- a/public/chat.html
+++ b/public/chat.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/css/styles.css">
     <title>بسيط | ChatApp</title>
 </head>
-<body>
+<body class="chat">
     
     <div class="chat__sidebar">
         <div class="text-center" id="users"></div>
